# bahn.bingo

./: .gitignore  Cargo.toml  bingo-values.json  flake.nix  package-lock.json
bahnbingo/: __init__.py
frontend/: bingo-values.json  index.html  package-lock.json  package.json
frontend/_old/: index.html  package.json  tailwind.config.js
frontend/_old/src/: App.tsx  index.css  main.tsx
frontend/_old/src/componentes/: BingoField.tsx
frontend/_old/src/helpers/: bingo.ts
frontend/assets/js/: values-and-share.js  win-reset.js
frontend/documents/: logo.afdesign  social.afphoto  social.afphoto~lock~
frontend/src/: App.css  App.tsx  BingoApi.ts  index.css
frontend/src/componentes/: BingoField.tsx  ShareOnMastodon.tsx
nixos-module/: default.nix
pkgs/: backend.nix  frontend.nix
src/: App.css  App.tsx  handler.rs  main.rs  models.rs  responses.rs  route.rs
