[package]
name = "bahn_bingo"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = {version = "0.6", features = ["headers"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3", features = ["cors"] }
uuid = {version = "*", features = ["serde", "v4"]}
chrono = {version = "*", features = ["serde"]}
resvg = "0.34"
log = "*"
env_logger = "*"
